--- a/package.json
+++ b/package.json
@@ -17,29 +17,40 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "body-parser": "^1.18.3",
     "broccoli-asset-rev": "^2.4.5",
+    "bulma": "^0.5.3",
     "ember-ajax": "^3.0.0",
+    "ember-bulma": "^0.4.1",
     "ember-cli": "~3.1.4",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-dotenv": "^2.1.0",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.1.1",
+    "ember-cli-sass": "^6.2.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
-    "ember-data": "~3.1.0",
+    "ember-data": "^3.1.1",
     "ember-export-application-global": "^2.0.0",
+    "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
+    "ember-simple-auth": "^1.6.0",
     "ember-source": "~3.1.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
-    "loader.js": "^4.2.3"
+    "express": "^4.16.3",
+    "glob": "^4.5.3",
+    "loader.js": "^4.2.3",
+    "morgan": "^1.9.0",
+    "torii": "^0.10.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
